Fix margins and always show scrollbar

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family-Poppins');
 
-html, body {
-  max-width: 98%;
+body {
   overflow-x: hidden;   
-  margin-left:auto;
-  margin-right:auto;
-  margin-bottom:50px;
+}
+
+html {
+  overflow-y: scroll;   
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-bottom: 50px;
 }
 
   input[type=text] {
@@ -33,4 +36,5 @@ th {
   height: 50px;
   background-color: white;
   text-align: center;
+  margin-left: -50px;
 }
